<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/border_radius"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginBottom="5dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/title_dialog_server"
            android:textColor="@color/text_color_principal"
            android:textSize="17sp"
            android:textStyle="bold"/>
        <LinearLayout
            android:id="@+id/btnInfoAnime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:background="@drawable/border_radius_detail"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_info"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_color_principal"
                android:padding="3dp"
                android:text="Info."/>
        </LinearLayout>

    </LinearLayout>

    <RadioGroup
        android:id="@+id/rgOptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rbOpcion1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@drawable/custom_icon_servers"
            android:textColor="@drawable/custom_text_color"
            app:buttonTint="@drawable/custom_color_icon"
            android:padding="10dp"
            android:checked="true"
            android:text="@string/radioBottom_option1"
            android:textSize="15sp"
            android:visibility="gone"
            tools:visibility="visible"/>

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rbOpcion2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@drawable/custom_icon_servers"
            android:textColor="@drawable/custom_text_color"
            app:buttonTint="@drawable/custom_color_icon"
            android:padding="10dp"
            android:visibility="gone"
            android:text="@string/radioBottom_option2"
            android:textSize="15sp"/>

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rbOpcion3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@drawable/custom_icon_servers"
            android:textColor="@drawable/custom_text_color"
            app:buttonTint="@drawable/custom_color_icon"
            android:padding="10dp"
            android:visibility="gone"
            android:text="@string/radioBottom_option3"
            android:textSize="15sp"/>

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rbOpcion4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@drawable/custom_icon_servers"
            android:textColor="@drawable/custom_text_color"
            app:buttonTint="@drawable/custom_color_icon"
            android:padding="10dp"
            android:visibility="gone"
            android:text="@string/radioBottom_option4"
            android:textSize="15sp"/>
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rbOpcion5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@drawable/custom_icon_servers"
            android:textColor="@drawable/custom_text_color"
            app:buttonTint="@drawable/custom_color_icon"
            android:visibility="gone"
            android:padding="10dp"
            android:text="@string/radioBottom_option5"
            android:textSize="15sp"/>
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rbOpcion6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@drawable/custom_icon_servers"
            android:textColor="@drawable/custom_text_color"
            app:buttonTint="@drawable/custom_color_icon"
            android:padding="10dp"
            android:visibility="gone"
            android:text="@string/radioBottom_option6"
            android:textSize="15sp"/>
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rbOpcion7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@drawable/custom_icon_servers"
            android:textColor="@drawable/custom_text_color"
            app:buttonTint="@drawable/custom_color_icon"
            android:visibility="gone"
            android:padding="10dp"
            android:text="@string/radioBottom_option7"
            android:textSize="15sp"/>
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rbOpcion8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@drawable/custom_icon_servers"
            android:textColor="@drawable/custom_text_color"
            app:buttonTint="@drawable/custom_color_icon"
            android:padding="10dp"
            android:visibility="gone"
            android:text="@string/radioBottom_option8"
            android:textSize="15sp"/>
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rbOpcion9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@drawable/custom_icon_servers"
            android:textColor="@drawable/custom_text_color"
            app:buttonTint="@drawable/custom_color_icon"
            android:padding="10dp"
            android:visibility="gone"
            android:text="@string/radioBottom_option9"
            android:textSize="15sp"/>

    </RadioGroup>
    <com.facebook.shimmer.ShimmerFrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:shimmer_auto_start="true">
        <LinearLayout
            android:id="@+id/viewLoading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <include layout="@layout/server_option_loading"/>
        </LinearLayout>
    </com.facebook.shimmer.ShimmerFrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btnCancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:padding="7dp"
            android:text="@string/text_dialog_cancel"
            android:textColor="@color/color_botoms_dialog"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/btnVer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ver"
            android:padding="7dp"
            android:textColor="@color/color_botoms_dialog"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>
