<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:background="@drawable/border_radius"
    android:orientation="vertical"
    android:padding="20dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_dialog_provider"
        android:textColor="@color/text_color_principal"
        android:textAlignment="center"
        android:padding="5dp"
        android:textSize="17sp"
        android:textStyle="bold"/>
    <RadioGroup
        android:id="@+id/rgOptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rbMonosChinos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@drawable/ic_monos_chinos"
            android:padding="14dp"
            android:textSize="15sp"
            android:text="@string/radioBottom_monoschinos"
            android:textColor="@drawable/custom_text_color"
            android:theme="@style/RadioButtonStyle"
            android:checked="true"/>
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rbAnimeFLV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@drawable/ic_animeflv"
            android:padding="14dp"
            android:backgroundTint="#424242"
            android:textSize="15sp"
            android:text="@string/radioBottom_animeflv"
            android:textColor="@drawable/custom_text_color"
            android:theme="@style/RadioButtonStyle"/>
    </RadioGroup>

    <TextView
        android:layout_gravity="end"
        android:id="@+id/btnCancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="7dp"
        android:text="@string/text_dialog_cancel"
        android:textColor="@color/color_botoms_dialog"
        android:textSize="15sp"
        android:textStyle="bold" />

</LinearLayout>