<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color_app"
    android:orientation="vertical"
    android:focusable="true"
    android:clickable="true"
    android:id="@+id/container">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical">

        <ImageView
            android:id="@+id/ivAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/ic_connect"
            app:tint="@color/icon_color"
            android:padding="10dp"
            android:layout_marginHorizontal="6dp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            app:layout_constraintStart_toEndOf="@id/ivSearch"
            app:layout_constraintEnd_toStartOf="@id/ivAccount"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:fontFamily="@font/asap"
            android:text="@string/menu_item_favoritos"
            android:textColor="@color/text_color_principal"
            android:textStyle="bold"
            android:textSize="@dimen/favoritesTittle"
            android:textAlignment="center"/>

        <ImageView
            android:id="@+id/ivSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/ic_search"
            app:tint="@color/icon_color"
            android:padding="10dp"
            android:layout_marginHorizontal="6dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tapLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabBackground="@color/background_color_app"
        app:tabTextAppearance="@style/TextAppearance.AppCompat"
        app:tabTextColor="@color/Subtittle_color"
        app:tabIndicatorColor="@color/color_botoms_dialog"
        app:tabSelectedTextColor="#C8C8C9">

        <com.google.android.material.tabs.TabItem
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/item_tab_favoritos" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/item_tab_pendientes" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/item_tab_finalizados" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viwPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tapLayout"/>

</LinearLayout>