<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="@drawable/border_radius"
    android:padding="10dp">

    <LinearLayout
        android:id="@+id/linearcontainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linear1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="30dp">

                <ImageView
                    android:id="@+id/ivPhoto"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:background="@color/background_color_app"
                    android:src="@drawable/ic_account"
                    app:tint="@color/icon_color" />
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="6dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvAccountName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:textColor="@color/text_color_principal"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    tools:text="Nombre Ejemplo" />

                <TextView
                    android:id="@+id/tvAccountEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:textColor="@color/text_color_principal"
                    android:textSize="12sp"
                    tools:text="david1234567892017@gmail.com" />

            </LinearLayout>

            <ImageView
                android:id="@+id/ivSingOut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:src="@drawable/ic_out"
                app:tint="@color/icon_color" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearBtns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearcontainer">

        <Button
            android:id="@+id/btnGuardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:backgroundTint="@color/color_botoms"
            android:drawableLeft="@drawable/ic_cloud_upload"
            android:text="@string/saveBtn_dialog"
            android:textColor="@color/text_color_principal" />

        <Button
            android:id="@+id/btnCargar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:backgroundTint="@color/color_botoms"
            android:drawableLeft="@drawable/ic_cloud_download"
            android:text="@string/loadBtn_dialog"
            android:textColor="@color/text_color_principal" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="7dp"
        android:text="@string/cerrar_dialog"
        android:textColor="@color/color_botoms_dialog"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearBtns" />


</androidx.constraintlayout.widget.ConstraintLayout>